# MoonGBA

./: README.md  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  EmuCore.kt  cpu.c  gba.h  jni_bridge.c  memory.c
app/src/main/java/com/moonlight/moongba/: EmuCore.kt  EmulatorView.kt  MainActivity.kt  MainActivity.kts
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
